Fixed some spacing and the width of a browser when to change a layout.

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -50,6 +50,10 @@ footer > * {
     background-repeat: no-repeat;
 }
 
+.fylo__footer__navigation {
+    margin-block-start: 80px;
+}
+
 .fylo__footer__list_item {
     margin-block-start: 16px;
 }
