--- a/scss/_intro.scss
+++ b/scss/_intro.scss
@@ -44,7 +44,7 @@
     transform: translateX(200%);
 }
 
-@media (min-width: 600px) {
+@media (min-width: 800px) {
     .fylo__intro {
         max-width: 800px;
         margin-inline-start: auto;
